# derpspace

./: .gitignore  README.md
.metadata/: version.ini
.recommenders/caches/: identified-project-coordinates.json
AngularTest/WebContent/: PlaceKittenTest.html  Test1.html
BrainfuckApp/: AndroidManifest.xml
COBOL/: gle  gle.cbl  helloWorld  helloWorld.cbl  makefile
Haskell/: avoid_k_palindrome.hs  cond.hs  fns.hs  gadt.hs  infinite_subsets.hs  namedParams.hs  palindromic_nums.hs  test.txt  wordCount.hs
Haskell/learning/: bst.hs  (+1 more)
Java/: README.md
Julia/: wordle.jl
Scheduler/: .project
apl/: snn.apl
brainfuck/: README.md  fckUPrinter.txt  in  multiplier.txt
c/: cshell.nix
c++/: README.md
c++/van_emde_boas_et_al/: CMakeLists.txt  shell.nix
c++/van_emde_boas_et_al/include/van_emde_boas_et_al/: van_emde_boas.h
c++/van_emde_boas_et_al/tests/: test_van_embde_boas.cpp
chain reaction automaton/: .project
clj_test/: .classpath  .project  project.clj
clojure/: README.md
go/: README.md  streams.go
lean/: book.lean  notes.md
lisp/: README.md  io-utils.lisp
maze-generator/: README.md
nonJavaDerps/: .project
prologs/: README.md  family.pl  family.pro  family.pro~
pythons/: README.md  ein klien algorithm.py  emoji-chess.py  falling_cylinder_sim.py  flash_extract.py  fsm.py  happy.py  hemanUtils.py  hue_light.py  interface_meta.py  jar_problem.py  lc_islands.py  logic_expr.py  look_say.py  mat_utils.py  mub_taxation.py  op_sudoku_solver.py  regression.py  sort-page-nums.py  string_permute.py
regexTester/: .project
rust/: #BigInt.rs#  BigInt.rs  FixedVec.rs  Stream  Stream.rs  Subsets.rs  elevator.rs
scheme/: consify.scm  factorial_base.scm
tcl/: cons.tcl  nqueens.tcl
(+663 files in other folders)
